# NekoDSL

./: .travis.yml  CHANGELOG.md  CMakeLists.txt  LANGUAGE.md  README.md  claude.md  demo.neko  demo.spv  sample.neko  sample.spv  to_shadertoy.py  vulkan_demo.cpp
.claude/: settings.local.json
dependencies/: CMakeLists.txt
docs/: CMakeLists.txt  Doxyfile
docs/source/: conf.py  index.rst  standard.rst  stl.rst
neko/: CMakeLists.txt
neko/include/neko/: neko.hpp
neko/src/: ast.hpp  binary.cpp  binary.tpp  code_generator.cpp  code_generator.tpp  compiler.cpp  neko_p.hpp  neko_parser.cpp  neko_parser.hpp  parser.cpp  parser.yy
nekoc/: CMakeLists.txt
nekoc/src/: nekoc.cpp
nekostl/: CMakeLists.txt  gen.py
nekostl/modules/: math.neko  operators.neko  stl.neko  types.neko
test/: CMakeLists.txt
test/neko/: CMakeLists.txt  neko.cpp
